Update Search page

--- a/search.html
+++ b/search.html
@@ -35,25 +35,29 @@
         </ol>
     </nav>
 
-    <div class="media">
-        <img src="wp-res/noun_Broken Document_959913.svg" width="64px" height="64px" class="mr-3" alt="favicon">
-        <div class="media-body">
-            <h5 class="mt-0" id="content-fqdn">Loading</h5>
-            <p class="mb-0"><small>Owned by <a id="content-owner"></a></small></p>
-            <p class="mt-0 mb-0"><small>
-                    Reported <span id="content-report-date"></span>
-                    by <span id="content-reporter"></span>
-                </small></p>
-            <p id="content-desc" class="mt-0"></p>
-        </div>
-    </div>
+    <div class="ml-2 mr-2">
 
-    <footer>
-        <hr />
-        <p class="mb-0 mt-0">The data is provided without any warranty.</p>
-        <p class="mb-0 mt-0">Broken Document by Juraj Sedlák from the Noun Project</p>
-        <p class="mb-0 mt-0">Copyright &copy; 2020 mkaraki</p>
-    </footer>
+        <div class="media ml-1 mr-1">
+            <!-- <img src="wp-res/noun_Broken Document_959913.svg" width="64px" height="64px" class="mr-3" alt="favicon"> -->
+            <div class="media-body">
+                <h5 class="mt-0" id="content-fqdn">Loading</h5>
+                <p class="mb-0" id="md-owner"><small>Owned by <a id="content-owner"></a></small></p>
+                <p class="mt-0 mb-0" id="md-report"><small>
+                        Reported <span id="content-report-date"></span>
+                        by <span id="content-reporter"></span>
+                    </small></p>
+                <p id="content-desc" class="mt-0"></p>
+            </div>
+        </div>
+
+        <footer>
+            <hr />
+            <p class="mb-0 mt-0">The data is provided without any warranty.</p>
+            <p class="mb-0 mt-0">Broken Document by Juraj Sedlák from the Noun Project</p>
+            <p class="mb-0 mt-0">Copyright &copy; 2020 mkaraki</p>
+        </footer>
+
+    </div>
 
     <script src="wp-res/search.js"></script>
 
