--- a/index.html
+++ b/index.html
@@ -31,25 +31,30 @@
         </form>
     </nav>
 
-    <h1 class="display-1">Domain Database</h1>
-    <p class="lead">
-        To more safe internet.
-    </p>
-    <br>
-    <hr />
-    <p>
-        On the Internet, we should check the page is safe. But it's a difficult thing. So, we made a community database
-        for it.
-    </p>
-    <p>
-        In this site, you can check the domain is safe or not.
-    </p>
+    <div class="ml-2 mr-2">
 
-    <footer>
+        <h1 class="display-1">Domain Database</h1>
+        <p class="lead">
+            To more safe internet.
+        </p>
+        <br>
         <hr />
-        <p class="mb-0 mt-0">The data is provided without any warranty.</p>
-        <p class="mb-0 mt-0">Copyright &copy; 2020 mkaraki</p>
-    </footer>
+        <p>
+            On the Internet, we should check the page is safe. But it's a difficult thing. So, we made a community
+            database
+            for it.
+        </p>
+        <p>
+            In this site, you can check the domain is safe or not.
+        </p>
+
+        <footer>
+            <hr />
+            <p class="mb-0 mt-0">The data is provided without any warranty.</p>
+            <p class="mb-0 mt-0">Copyright &copy; 2020 mkaraki</p>
+        </footer>
+
+    </div>
 
 </body>
 
