--- a/search.html
+++ b/search.html
@@ -25,7 +25,8 @@
     <nav class="navbar navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Domain DB</a>
         <form class="form-inline" action="search.html" method="get">
-            <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search Domain" aria-label="Search">
+            <input class="form-control mr-sm-2" id="searchbox" name="q" type="search" placeholder="Search Domain"
+                aria-label="Search">
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
