--- a/search.html
+++ b/search.html
@@ -26,7 +26,7 @@
         <a class="navbar-brand" href="index.html">Domain DB</a>
         <form class="form-inline" action="search.html" method="get">
             <input class="form-control mr-sm-2" id="searchbox" name="q" type="search" placeholder="Search Domain"
-                aria-label="Search">
+                aria-label="Search" />
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
         </form>
     </nav>
@@ -41,10 +41,10 @@
         <div class="media ml-1 mr-1">
             <div class="media-body">
                 <h5 class="mt-0" id="content-fqdn">Loading</h5>
-                <p class="mb-0" id="md-owner"><small>Owned by <a id="content-owner"></a></small></p>
+                <p class="mb-0" id="md-owner"><small>Owned by <i><a id="content-owner"></a></i></small></p>
                 <p class="mt-0 mb-0" id="md-report"><small>
                         Reported <span id="content-report-date"></span>
-                        by <span id="content-reporter"></span>
+                        by <i id="content-reporter"></i>
                     </small></p>
                 <p id="content-desc" class="mt-0"></p>
             </div>
