--- a/rule.html
+++ b/rule.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>domain-db</title>
+    <title>Rules - domain-db</title>
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
@@ -64,6 +64,20 @@
         <ul>
             <li>WHOIS</li>
             <li><a href="https://www.iana.org/domains/root/db">Root Zone Database (IANA)</a></li>
+            <li>Government agencies of member states of the United Nations (<a
+                    href="https://www.un.org/en/member-states/">list</a>)</li>
+        </ul>
+
+        <h4>Generator Number (in <a href="https://github.com/mkaraki/domaindb">repository</a>)</h4>
+        <p>
+            generator directory has a number that can be prioritized.
+            These are the list of numbers.
+        </p>
+        <ul>
+            <li>01: IANA Information</li>
+            <li>02: Government agencies Information</li>
+            <li>80: Third-party Information Source</li>
+            <li>99: Our Information Source</li>
         </ul>
 
         <footer>
