Add some google domains 1e100.net gserviceaccount.com

--- a/rule.html
+++ b/rule.html
@@ -66,6 +66,7 @@
             <li><a href="https://www.iana.org/domains/root/db">Root Zone Database (IANA)</a></li>
             <li>Government agencies of member states of the United Nations (<a
                     href="https://www.un.org/en/member-states/">list</a>)</li>
+            <li>Some company (like Google)</li>
         </ul>
 
         <h4>Generator Number (in <a href="https://github.com/mkaraki/domaindb">repository</a>)</h4>
@@ -77,6 +78,7 @@
             <li>01: IANA Information</li>
             <li>02: Government agencies Information</li>
             <li>80: Third-party Information Source</li>
+            <li>90: Third-party Information Source</li>
             <li>99: Our Information Source</li>
         </ul>
 
